@@ -1,3 +1,11 @@
+2010-06-18  Alexis Menard  <alexis.menard@nokia.com>
+
+        Reviewed by Simon Hausmann.
+
+        [Qt] Fix documentation for the declarative module import.
+
+        * declarative/qdeclarativewebview.cpp:
+
 2010-06-18  Simon Hausmann  <simon.hausmann@nokia.com>
 
         Reviewed by Antti Koivisto.
